--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -267,6 +267,9 @@
               {% if can('participants:view') %}
                 <a class="pill {% if ep.startswith('participants.') %}active{% endif %}" href="{{ url_for('participants.list_participants') }}">Participants</a>
               {% endif %}
+              {% if can('quartiers:view') %}
+                <a class="pill {% if ep.startswith('quartiers.') %}active{% endif %}" href="{{ url_for('quartiers.index') }}">Quartiers</a>
+              {% endif %}
             </div>
 
             <details class="nav-group nav-more">
@@ -304,6 +307,9 @@
               {% endif %}
               {% if can('secteurs:edit') %}
                 <a class="pill {% if ep.startswith('admin.secteurs') %}active{% endif %}" href="{{ safe_url_for('admin.secteurs') }}">Secteurs</a>
+              {% endif %}
+              {% if can('quartiers:view') %}
+                <a class="pill {% if ep.startswith('quartiers.') %}active{% endif %}" href="{{ url_for('quartiers.index') }}">Quartiers</a>
               {% endif %}
               <a class="pill {% if ep.startswith('main.controle') %}active{% endif %}" href="{{ url_for('main.controle') }}">Contrôle</a>
             </div>
